added note to check that treaty period A has not been extended

--- a/app/views/meta/using.html.erb
+++ b/app/views/meta/using.html.erb
@@ -64,7 +64,8 @@
 <%= content_tag( 'h2', 'Treaty objection period A' ) %>
 <ul>
 	<%= content_tag( 'li', "Set the start date to the date of laying." ) %>
-	<%= content_tag( 'li', "Set the number of days to count as 21." ) %>
+	<%= content_tag( 'li', "Check if there has been a Government statement extending period A." ) %>
+	<%= content_tag( 'li', "If not, set the number of days to count as 21." ) %>
 </ul>
  
 <%= content_tag( 'h2', 'Treaty objection period B' ) %>
