added powered by brarians

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -57,6 +57,7 @@ td.lords {font-weight:bold;background-color:pink;}
 </nav>
 
 <h1><%= @title || "Parliament Calendar" %></h1>
+<p>Powered by House of Commons librarians.</p>
 </header>
 <main>
 <%= yield %>
