moved day count entry into second form

--- a/app/views/calculator/_form.html.erb
+++ b/app/views/calculator/_form.html.erb
@@ -1,38 +1,14 @@
-<% if @procedures.empty?%> 
-	<%= content_tag( 'p', 'The scrutiny period calculator is currently undergoing maintenance. We hope to have it back fairly soon.' ) %>
-<% else -%>
-
-	<%= content_tag( 'p', link_to( 'Using the calculator', meta_using_url ) ) %>
-	
-	<form action="calculator/calculate" method="GET" id="calculator">
-
+<%= content_tag( 'p', link_to( 'Using the calculator', meta_using_url ) ) %>
+<form action="calculator/calculate" method="GET" id="calculator">
 	<fieldset>
-	<legend>Period to calculate</legend>
-
-	<%= render :partial => 'calculator/procedure', :collection => @procedures %>
-
+		<legend>Period to calculate</legend>
+		<%= render :partial => 'calculator/procedure', :collection => @procedures %>
 	</fieldset>
-
-<p>
-	<label>
-	Start date: DD-MM-YYYY
-	<br>
-	<input type="date" name="start-date" id="start-date" required>
-
-	</label>
-</p>
-
-<p>
-	<label>
-	Number of days to count
-	<br>
-	<input type="number" name="day-count" id="day-count" required>
-	</label>
-
-</p>
-
-	<button type="submit" id="calculate">Calculate</button>
-
-
-	</form>
-<% end -%>
+	<p>
+		<label>Start date: DD-MM-YYYY
+			<br>
+			<input type="date" name="start-date" id="start-date" required>
+		</label>
+	</p>
+	<button type="submit" id="calculate">Start</button>
+</form>
