--- a/app/views/house/_day.html.erb
+++ b/app/views/house/_day.html.erb
@@ -1,3 +1,6 @@
 <li>
-	<%= start_date %>
+	<h2>
+		<%= day.start_date.strftime( '%A, ' ) %><%= day.start_date.strftime('%e').strip.to_i.ordinalize  %><%= day.start_date.strftime( ' %B %Y' ) %>
+	</h2>
+	<%= content_tag( 'p', day.day_type ) %>
 </li>
