--- a/app/views/house/_day.ics.erb
+++ b/app/views/house/_day.ics.erb
@@ -1,6 +1,5 @@
 BEGIN:VEVENT
 SUMMARY:<%= day.day_type %>
-DTSTART;TZID=Europe/London:<%= day.start_date.strftime( '%Y%m%d' ) %>
-DTEND;TZID=Europe/London:<%= day.end_date.next_day.strftime( '%Y%m%d' ) %>
+DSTART;TZID=Europe/London:<%= day.start_date.strftime( '%Y%m%d' ) %>
 STATUS:TENTATIVE
 END:VEVENT
