added prodid, closed newline at end

--- a/app/views/house/upcoming.ics.erb
+++ b/app/views/house/upcoming.ics.erb
@@ -1,5 +1,5 @@
 BEGIN:VCALENDAR
+PRODID:ukparliament/egg-timer
 VERSION:2.0
 CALSCALE:GREGORIAN
-<%= render :partial => 'day', :collection => @house.upcoming %>
-END:VCALENDAR
+<%= render :partial => 'day', :collection => @house.upcoming %>END:VCALENDAR
