removed timezone from dtstart, added dtstamp, added uid

--- a/app/views/house/_day.ics.erb
+++ b/app/views/house/_day.ics.erb
@@ -1,5 +1,7 @@
 BEGIN:VEVENT
 SUMMARY:<%= day.day_type %>
-DSTART;TZID=Europe/London:<%= day.start_date.strftime( '%Y%m%d' ) %>
+UID:<%= day.start_date.strftime( '%Y%m%d' ) %>000000
+DTSTAMP:<%= day.start_date.strftime( '%Y%m%d' ) %>T000000
+DTSTART:<%= day.start_date.strftime( '%Y%m%d' ) %>
 STATUS:TENTATIVE
 END:VEVENT
