added .ics to urls

--- a/app/views/meta/subscribe.html.erb
+++ b/app/views/meta/subscribe.html.erb
@@ -2,7 +2,7 @@
 
 
 <%= content_tag( 'h2', 'House of Commons' ) %>
-<input value="<%= house_upcoming_url( :house => 1 ) %>" size="70" />
+<input value="<%= house_upcoming_url( :house => 1 ) %>.ics" size="70" />
 
 <%= content_tag( 'h2', 'House of Lords' ) %>
-<input value="<%= house_upcoming_url( :house => 2 ) %>" size="70" />
+<input value="<%= house_upcoming_url( :house => 2 ) %>.ics" size="70" />
