--- a/app/views/meta/subscribe.html.erb
+++ b/app/views/meta/subscribe.html.erb
@@ -1,4 +1,8 @@
-<p>You can subscribe to calendars for upcoming days for both Houses in your favourite calendar application. Dates are based on business statements and on typical patterns and are subject to change. The further into the future the date, the less reliable the information. By subscribing to a calendar, your calendar will be updated as new information becomes available.</p>
+<p>You can subscribe to calendars for upcoming days for both Houses in any application that reads .ics files, including Google Calendar, Apple Calendar and Outlook.</p>
+
+<p>The calendar is based on expected business, which is subject to change. Sittings for dates further in the future are more likely to change.</p> 
+
+<p>Once you've subscribed to a calendar, any new information will be made available when the calendar is updated.</p>
 
 
 <%= content_tag( 'h2', 'House of Commons' ) %>
