--- a/app/views/house/_day.ics.erb
+++ b/app/views/house/_day.ics.erb
@@ -3,5 +3,5 @@ SUMMARY:<%= day.day_type %>
 UID:<%= day.start_date.strftime( '%Y%m%d' ) %>000000
 DTSTAMP:<%= day.start_date.strftime( '%Y%m%d' ) %>T000000
 DTSTART;VALUE=DATE:<%= day.start_date.strftime( '%Y%m%d' ) %>
-FBTYPE:FREE
+STATUS:TENTATIVE
 END:VEVENT
