--- a/app/views/meta/subscribe.html.erb
+++ b/app/views/meta/subscribe.html.erb
@@ -10,3 +10,7 @@
 
 <%= content_tag( 'h2', 'House of Lords' ) %>
 <input value="<%= house_upcoming_url( :house => 2 ) %>.ics" size="70" />
+
+<%= content_tag( 'h2', 'Both Houses' ) %>
+<input value="<%= house_upcoming_all_url %>.ics" size="70" />
+<%= content_tag( 'p', 'Which this feed validates against the specification, it works in Outlook but not in Google Calendar.' ) %>
