--- a/app/views/meta/subscribe.html.erb
+++ b/app/views/meta/subscribe.html.erb
@@ -13,4 +13,4 @@
 
 <%= content_tag( 'h2', 'Both Houses' ) %>
 <input value="<%= house_upcoming_all_url %>.ics" size="70" />
-<%= content_tag( 'p', 'Which this feed validates against the specification, it works in Outlook but not in Google Calendar.' ) %>
+<%= content_tag( 'p', 'Whilst this feed validates against the specification, it works in Outlook but not in Google Calendar.' ) %>
