--- a/app/views/calendar/index.html.erb
+++ b/app/views/calendar/index.html.erb
@@ -1,15 +1,3 @@
-
-<p><a href="/calendar/2022">2022</a></p>
-
-<p><a href="/calendar/2021">2021</a></p>
-
-<p><a href="/calendar/2020">2020</a></p>
-
-<p><a href="/calendar/2019">2019</a></p>
-
-<p><a href="/calendar/2018">2018</a></p>
-
-<p><a href="/calendar/2017">2017</a></p>
-
-
-
+<% @years.each do |year| -%>
+	<%= content_tag( 'p', link_to( year, "/calendar/#{year}" ) ) %>
+<% end -%>
