added remedial order details. names as per ellie

--- a/app/views/meta/using.html.erb
+++ b/app/views/meta/using.html.erb
@@ -61,6 +61,30 @@
 	<%= content_tag( 'li', "Set the number of days to count as 28." ) %>
 </ul>
 
+<%= content_tag( 'h2', 'Remedial order (non-urgent procedure) - proposed draft scrutiny period' ) %>
+<ul>
+	<%= content_tag( 'li', "Set the start date to the date of laying of the proposed draft." ) %>
+	<%= content_tag( 'li', "Set the number of days to count as 60." ) %>
+</ul>
+
+<%= content_tag( 'h2', 'Remedial order (non-urgent procedure) - draft affirmative scrutiny period' ) %>
+<ul>
+	<%= content_tag( 'li', "Set the start date to the date of laying of the instrument." ) %>
+	<%= content_tag( 'li', "Set the number of days to count as 60." ) %>
+</ul>
+
+<%= content_tag( 'h2', 'Remedial order (urgent procedure) - made affirmative scrutiny period' ) %>
+<ul>
+	<%= content_tag( 'li', "Set the start date to the date of making." ) %>
+	<%= content_tag( 'li', "Set the number of days to count as 60." ) %>
+</ul>
+
+<%= content_tag( 'h2', 'Remedial order (urgent procedure) - made affirmative approval period' ) %>
+<ul>
+	<%= content_tag( 'li', "Set the start date to the date of making." ) %>
+	<%= content_tag( 'li', "Set the number of days to count as 120." ) %>
+</ul>
+
 <%= content_tag( 'h2', 'Treaty objection period A' ) %>
 <ul>
 	<%= content_tag( 'li', "Set the start date to the date of laying." ) %>
