updated casing as per anya request

--- a/app/views/meta/using.html.erb
+++ b/app/views/meta/using.html.erb
@@ -1,4 +1,4 @@
-<%= content_tag( 'h2', 'Legislative Reform Order scrutiny period' ) %>
+<%= content_tag( 'h2', 'Legislative reform order scrutiny period' ) %>
 <ul>
 	<%= content_tag( 'li', "Set the start date to the date of laying." ) %>
 	<%= content_tag( 'li', "Set the number of days to count as 40 for negative or affirmative." ) %>
@@ -7,7 +7,7 @@
 	<%= content_tag( 'li', "#{link_to( 'Contact the SLSC', 'mailto:hlseclegscrutiny@parliament.uk' )} team if in doubt.".html_safe ) %>
 </ul>
  
-<%= content_tag( 'h2', 'Localism Order scrutiny period' ) %>
+<%= content_tag( 'h2', 'Localism order scrutiny period' ) %>
 <ul>
 	<%= content_tag( 'li', "Set the start date to the date of laying." ) %>
 	<%= content_tag( 'li', "Set the number of days to count as 40 for negative or affirmative." ) %>
@@ -16,25 +16,25 @@
 	<%= content_tag( 'li', "#{link_to( 'Contact the SLSC', 'mailto:hlseclegscrutiny@parliament.uk' )} team if in doubt.".html_safe ) %>
 </ul>
 
-<%= content_tag( 'h2', 'Negative Statutory Instrument praying period (Commons only)' ) %>
+<%= content_tag( 'h2', 'Negative statutory instrument praying period (laid before Commons only)' ) %>
 <ul>
 	<%= content_tag( 'li', "Set the start date to the date of laying." ) %>
 	<%= content_tag( 'li', "Set the number of days to count as 40." ) %>
 </ul>
 
-<%= content_tag( 'h2', 'Negative Statutory Instrument praying period (Commons and Lords)' ) %>
+<%= content_tag( 'h2', 'Negative statutory instrument praying period (laid before both Houses)' ) %>
 <ul>
 	<%= content_tag( 'li', "Set the start date to the date of laying." ) %>
 	<%= content_tag( 'li', "Set the number of days to count as 40." ) %>
 </ul>
 
-<%= content_tag( 'h2', 'Made affirmative approval period (Commons only)' ) %>
+<%= content_tag( 'h2', 'Made affirmative approval period (laid before Commons only)' ) %>
 <ul>
 	<%= content_tag( 'li', "Set the start date to the date of making." ) %>
 	<%= content_tag( 'li', "Set the number of days to count as specified in italics at the top of the instrument on #{link_to( 'legislation.gov.uk', 'https://www.legislation.gov.uk/' )}.".html_safe ) %>
 </ul>
 
-<%= content_tag( 'h2', 'Made Affirmative approval period (laid before both Houses, clock stops if either House rises)' ) %>
+<%= content_tag( 'h2', 'Made affirmative approval period (laid before both Houses, clock stops if either House rises)' ) %>
 <ul>
 	<%= content_tag( 'li', "Set the start date to the date of making." ) %>
 	<%= content_tag( 'li', "Set the number of days to count as specified in italics at the top of the instrument on #{link_to( 'legislation.gov.uk', 'https://www.legislation.gov.uk/' )}.".html_safe ) %>
@@ -42,14 +42,14 @@
 " ) %>
 </ul>
 
-<%= content_tag( 'h2', 'Made Affirmative approval period (laid before both Houses, clock stops if both Houses rise)' ) %>
+<%= content_tag( 'h2', 'Made affirmative approval period (laid before both Houses, clock stops if both Houses rise)' ) %>
 <ul>
 	<%= content_tag( 'li', "Set the start date to the date of making." ) %>
 	<%= content_tag( 'li', "Set the number of days to count as specified in italics at the top of the instrument on #{link_to( 'legislation.gov.uk', 'https://www.legislation.gov.uk/' )}.".html_safe ) %>
 	<%= content_tag( 'li', "Refer to the enabling Act to check if the clock stops if both Houses rise." ) %>
 </ul>
 
-<%= content_tag( 'h2', 'Proposed Negative Statutory Instrument committee sifting period' ) %>
+<%= content_tag( 'h2', 'Proposed negative statutory instrument committee sifting period' ) %>
 <ul>
 	<%= content_tag( 'li', "Set the start date to the date of laying." ) %>
 	<%= content_tag( 'li', "Set the number of days to count as 10." ) %>
