--- a/app/views/meta/using.html.erb
+++ b/app/views/meta/using.html.erb
@@ -49,7 +49,7 @@
 	<%= content_tag( 'li', "Refer to the enabling Act to check if the clock stops if both Houses rise." ) %>
 </ul>
 
-<%= content_tag( 'h2', 'Proposed negative statutory instrument committee sifting period' ) %>
+<%= content_tag( 'h2', 'Proposed negative statutory instrument - committee sifting period' ) %>
 <ul>
 	<%= content_tag( 'li', "Set the start date to the date of laying." ) %>
 	<%= content_tag( 'li', "Set the number of days to count as 10." ) %>
