--- a/app/views/meta/prorogation_and_dissolution.html.erb
+++ b/app/views/meta/prorogation_and_dissolution.html.erb
@@ -8,30 +8,21 @@
 
 <%= content_tag( 'h2', 'What to do upon the announcement of prorogation or dissolution' ) %>
 
-<%= content_tag( 'p', "In both cases, action must be taken to:" ) %>
+<%= content_tag( 'p', "In both cases, action must be taken:" ) %>
+
+<%= content_tag( 'h3', 'In Google calendar' ) %>
 <ol>
 	<%= content_tag( 'li', "Remove any previously created sitting or adjournment days set to take place during the prorogation or the dissolution period from the Google calendars." ) %>
 	<%= content_tag( 'li', "Check that these changes have propagated to the application. This should take no longer than 15 minutes." ) %>
-	<%= content_tag( 'li', "Pause the application's syncing script." ) %>
-	<%= content_tag( 'li', "Pull a copy of the database from Heroku." ) %>
-	<%= content_tag( 'li', "Add data to the database to close off the current session, add the next session and add a new Parliament period if appropriate." ) %>
-	<%= content_tag( 'li', "Push the updated database to Heroku." ) %>
-	<%= content_tag( 'li', "Restart the syncing scripts." ) %>
 </ol>
-<%= content_tag( 'p', "In order to do this we need access to the Heroku account running the application." ) %>
 
-<%= content_tag( 'p', "These are the steps to pause the application’s syncing script and pull a copy of the database:
-" )%>
-
+<%= content_tag( 'h3', 'On the Heroku website' ) %>
 <ol>
 	<%= content_tag( 'li', 'Sign into Heroku.' ) %>
 	<%= content_tag( 'li', 'Navigate to the application (parliament-calendar).' ) %>
 	<%= content_tag( 'li', "Navigate to the 'Resources' tab." ) %>
 	<%= content_tag( 'li', "Click on 'Heroku Scheduler'." ) %>
 	<%= content_tag( 'li', "Click on the cross with tooltip 'Delete this job'. This will stop the application importing updates from the Google calendars until we've finished." ) %>
-	<%= content_tag( 'li', "Open your terminal and navigate to the application directory." ) %>
-	<%= content_tag( 'li', "Pull the database from Heroku by running #{content_tag( 'code', 'heroku pg:pull DATABASE_URL parliament_calendar' )}. This will give you an up to date copy of the database on your machine.".html_safe ) %>
-	<%= content_tag( 'li', "The database dump is taken as a backup in case things go wrong. It is not used for the rest of this task." ) %>
 </ol>
 
 <%= content_tag( 'h2', 'What to do upon the announcement of prorogation' ) %>
@@ -44,7 +35,6 @@
 
 <%= content_tag( 'p', "The steps are:" ) %>
 <ol>
-	<%= content_tag( 'li', "On the command line, navigate to the #{content_tag( 'code', 'parliament-calendar' )} application.".html_safe ) %>
 	<%= content_tag( 'li', "Open #{content_tag( 'code', 'db/data/sessions.csv' )}.".html_safe ) %>
 	<%= content_tag( 'li', "Add the end date of the current session to the first row.".html_safe ) %>
 	<%= content_tag( 'li', "Add a new row before the first row of the CSV containing: the number of the current Parliament period, the number of the session in that Parliament and the start date of the session.".html_safe ) %>
@@ -54,16 +44,16 @@
 
 <%= content_tag( 'h2', 'What to do upon the announcement of dissolution' ) %>
 <ol>
-	<%= content_tag( 'li', "On the command line, navigate to the #{content_tag( 'code', 'parliament-calendar' )} application.".html_safe ) %>
 	<%= content_tag( 'li', "Open #{content_tag( 'code', 'db/data/sessions.csv' )}.".html_safe ) %>
 	<%= content_tag( 'li', "Add the end date of the current session to the first row. If the dissolution is directly preceded by a prorogation period, this will be the date of prorogation. If dissolution is not directly preceded by a prorogation period, this will be the date of dissolution.".html_safe ) %>
 	<%= content_tag( 'li', "Add a new row before the first row of the CSV containing: the number of the next Parliament period, the number of the session in that Parliament - always 1 - and the start date of the session. This will be the same as the start date of the next Parliament period.".html_safe ) %>
+	<%= content_tag( 'li', "Ensure that the #{link_to( 'Sessions Google sheet', 'https://docs.google.com/spreadsheets/d/1e3AnQebAO5ug-Pc_0qDq9KkyZiy0dRhJMvm0lRRJOXk/edit?usp=sharing')} is updated.".html_safe ) %>
 	<%= content_tag( 'li', "Open #{content_tag( 'code', 'db/data/parliaments.csv' )}.".html_safe ) %>
 	<%= content_tag( 'li', "Add the dissolution date of the current Parliament period to the fifth column of the last row.".html_safe ) %>
 	<%= content_tag( 'li', "Add a citation to the House of Commons Journal to the tenth column of the last row.".html_safe ) %>
 	<%= content_tag( 'li', "Add a citation to the London Gazette to the eleventh column of the last row.".html_safe ) %>
 	<%= content_tag( 'li', "Add a new row at the bottom of the CSV.".html_safe ) %>
-	<%= content_tag( 'li', "Add the number of the Parliament to the first column of the new row.".html_safe ) %>
+	<%= content_tag( 'li', "Add the number of the new Parliament period to the first column of the new row.".html_safe ) %>
 	<%= content_tag( 'li', "Add the polling date to the second column of the new row.".html_safe ) %>
 	<%= content_tag( 'li', "Add the first date of the new Parliament period to the third column of the new row.".html_safe ) %>
 	<%= content_tag( 'li', "Add the date of State Opening of the new Parliament period to the fourth column of the new row.".html_safe ) %>
@@ -75,10 +65,10 @@
 
 <%= content_tag( 'h2', 'Resetting the database', :id => 'resetting-the-database' ) %>
 <ol>
-	<%= content_tag( 'li', "Run #{content_tag( 'code', 'psql parliament_calendar < db/schema/setup.sql' )}.".html_safe ) %>
+	<%= content_tag( 'li', "Run #{content_tag( 'code', 'psql parliament_calendar < db/schema/setup.sql' )}. This removes and recreates all tables in the local database.".html_safe ) %>
 	<%= content_tag( 'li', "Run #{content_tag( 'code', 'rake setup' )}.".html_safe ) %>
 	<%= content_tag( 'li', "Run #{content_tag( 'code', 'heroku maintenance:on' )} to switch the application to maintenance mode.".html_safe ) %>
-	<%= content_tag( 'li', "Run #{content_tag( 'code', 'heroku pg:reset --confirm parliament-calendar' )} to reset the database: this removes information from the database.".html_safe ) %>
+	<%= content_tag( 'li', "Run #{content_tag( 'code', 'heroku pg:reset --confirm parliament-calendar' )} to reset the database: this removes information from the Heroku database.".html_safe ) %>
 	<%= content_tag( 'li', "Run #{content_tag( 'code', 'heroku pg:push parliament_calendar DATABASE_URL' )} to push the new data to the database on Heroku.".html_safe ) %>
 	<%= content_tag( 'li', "From 'Heroku Scheduler', click 'Create job'." ) %>
 	<%= content_tag( 'li', "Enter the command #{content_tag( 'code', 'rake sync' )} in the 'Run Command' box.".html_safe ) %>
