--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -46,6 +46,8 @@ font-size: 1rem;
 }
 td.commons {font-weight:bold;background-color:lightgreen;}
 td.lords {font-weight:bold;background-color:pink;}
+ol#sessions {list-style: none;padding-left:0;}
+ol#prorogations {list-style: none;padding-left:0;}
             </style>
 </head>
 <body>
