added more instructions around LROs

--- a/app/views/meta/using.html.erb
+++ b/app/views/meta/using.html.erb
@@ -1,9 +1,11 @@
 <%= content_tag( 'h2', 'Legislative reform order scrutiny period' ) %>
 <ul>
 	<%= content_tag( 'li', "Set the start date to the date of laying." ) %>
+	<%= content_tag( 'li', "Set the number of days to count as 30 for the procedure determination period." ) %>
 	<%= content_tag( 'li', "Set the number of days to count as 40 for negative or affirmative." ) %>
-	<%= content_tag( 'li', "Set the number of days to count as 60 for super affirmative.
-" ) %>
+	<%= content_tag( 'li', "Set the number of days to count as 60 for super affirmative." ) %>
+	<%= content_tag( 'li', "If the Minister chooses to lay a revised instrument as part of the super-affirmative procedure, the clock continues from the laying of the original instrument." ) %>
+	<%= content_tag( 'li', "Should a procedure recommendation be made by a commiittee of either House and the recommendation be rejected by that House, no account is taken of any day between the day on which the recommendation was made and the day on which the recommendation was rejected." ) %>
 	<%= content_tag( 'li', "#{link_to( 'Contact the SLSC', 'mailto:hlseclegscrutiny@parliament.uk' )} team if in doubt.".html_safe ) %>
 </ul>
  
