--- a/app/views/sitting_day/_sitting_day.html.erb
+++ b/app/views/sitting_day/_sitting_day.html.erb
@@ -1,1 +1,1 @@
-<%= content_tag( 'li', sitting_day.label ) %>
+<%= content_tag( 'li', link_to( sitting_day.label, calendar_day_url( :year => sitting_day.start_date.year, :month => sitting_day.start_date.month, :day => sitting_day.start_date.day ) ) ) %>
