renamed date partial to day

--- a/app/views/calendar/month.html.erb
+++ b/app/views/calendar/month.html.erb
@@ -17,6 +17,6 @@
 		</tr>
 	</thead>
 	<tbody>
-	<%= render :partial => 'date', :collection => @date_range %>
+	<%= render :partial => 'day', :collection => @date_range %>
 	</tbody>
 </table>
