--- a/app/views/calendar/day.html.erb
+++ b/app/views/calendar/day.html.erb
@@ -15,7 +15,7 @@
 		</tr>
 	</thead>
 	<tbody>
-	<%= render :partial => 'date', :object => @date %>
+	<%= render :partial => 'day', :object => @date %>
 	</tbody>
 </table>
 
