moved day listing by house under house days controller

--- a/app/views/house_days/adjournment_day_list.html.erb
+++ b/app/views/house_days/adjournment_day_list.html.erb
@@ -1,4 +1,4 @@
-<%= content_tag( 'h1', "#{@house.name} - Adjournment days" ) %>
+<%= content_tag( 'h1', "#{@house.name} - adjournment days" ) %>
 
 <ol>
 	<%= render :partial => 'adjournment_day/adjournment_day', :collection => @house.adjournment_days %>
