--- a/app/views/house_days/sitting_day_list.html.erb
+++ b/app/views/house_days/sitting_day_list.html.erb
@@ -1,4 +1,4 @@
-<%= content_tag( 'h1', "#{@house.name} - Sitting days" ) %>
+<%= content_tag( 'h1', "#{@house.name} - sitting days" ) %>
 
 <ol>
 	<%= render :partial => 'sitting_day/sitting_day', :collection => @house.sitting_days %>
