--- a/app/views/house_days/virtual_sitting_day_list.html.erb
+++ b/app/views/house_days/virtual_sitting_day_list.html.erb
@@ -1,4 +1,4 @@
-<%= content_tag( 'h1', "#{@house.name} - Virtual sitting days" ) %>
+<%= content_tag( 'h1', "#{@house.name} - virtual sitting days" ) %>
 
 <ol>
 	<%= render :partial => 'virtual_sitting_day/virtual_sitting_day', :collection => @house.virtual_sitting_days %>
