--- a/app/views/meta/subscribe.html.erb
+++ b/app/views/meta/subscribe.html.erb
@@ -6,10 +6,10 @@
 
 
 <%= content_tag( 'h2', 'House of Commons' ) %>
-<input value="<%= house_upcoming_url( :house => 1 ) %>.ics" size="70" />
+<input value="<%= house_days_upcoming_url( :house => 1 ) %>.ics" size="70" />
 
 <%= content_tag( 'h2', 'House of Lords' ) %>
-<input value="<%= house_upcoming_url( :house => 2 ) %>.ics" size="70" />
+<input value="<%= house_days_upcoming_url( :house => 2 ) %>.ics" size="70" />
 
 <%= content_tag( 'h2', 'Both Houses' ) %>
 <input value="<%= house_upcoming_all_url %>.ics" size="70" />
