--- a/app/views/house/show.html.erb
+++ b/app/views/house/show.html.erb
@@ -5,7 +5,7 @@
 		<%= content_tag( 'li', link_to( 'Upcoming sitting days', house_days_sitting_day_upcoming_url ) ) %>
 		<%= content_tag( 'li', link_to( 'All sitting days', house_days_sitting_day_list_url ) ) %>
 		<%= content_tag( 'li', link_to( 'All preceding sitting days', house_days_sitting_day_preceding_url ) ) %>
-		<%= content_tag( 'li', link_to( 'Last sitting day', house_days_sitting_day_latest_url ) ) %>
+		<%= content_tag( 'li', link_to( 'Latest sitting day', house_days_sitting_day_latest_url ) ) %>
 	</ul>
 </div>
 
@@ -15,6 +15,8 @@
 		<%= content_tag( 'li', link_to( 'Upcoming virtual sitting days', house_days_virtual_sitting_day_upcoming_url ) ) %>
 		<%= content_tag( 'li', link_to( 'Next virtual sitting day', house_days_virtual_sitting_day_next_url ) ) %>
 		<%= content_tag( 'li', link_to( 'All virtual sitting days', house_days_virtual_sitting_day_list_url ) ) %>
+		<%= content_tag( 'li', link_to( 'All preceding virtual sitting days', house_days_virtual_sitting_day_preceding_url ) ) %>
+		<%= content_tag( 'li', link_to( 'Latest virtual sitting day', house_days_virtual_sitting_day_latest_url ) ) %>
 	</ul>
 </div>
 
