new links to preceding and latest adjournment days in a house

--- a/app/views/house/show.html.erb
+++ b/app/views/house/show.html.erb
@@ -26,5 +26,7 @@
 		<%= content_tag( 'li', link_to( 'Upcoming adjournment days', house_days_adjournment_day_upcoming_url ) ) %>
 		<%= content_tag( 'li', link_to( 'Next adjournment day', house_days_adjournment_day_next_url ) ) %>
 		<%= content_tag( 'li', link_to( 'All adjournment days', house_days_adjournment_day_list_url ) ) %>
+		<%= content_tag( 'li', link_to( 'All preceding adjournment days', house_days_adjournment_day_preceding_url ) ) %>
+		<%= content_tag( 'li', link_to( 'Latest adjournment day', house_days_adjournment_day_latest_url ) ) %>
 	</ul>
 </div>
